feat: added email token verification

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ JWT_SECRET=aslkdjflaskdjf
 BRAINTREE_MERCHANT_ID=h9fcgw5xtk5fmq2j
 BRAINTREE_PUBLIC_KEY=ndqshnfyk8248crw
 BRAINTREE_PRIVATE_KEY=e8dab85d6cc36757b0c7080a3d84f3d1
-
+EMAIL_USERNAME=test01.titan@gmail.com
+EMAIL_PASSWORD=omega_team
