--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.10",
+    "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
     "uuid": "^3.3.3"
   }
