--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.7.10",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "formidable": "^1.2.1"
   }
 }
