--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
-    "uuid": "^3.3.3",
-    "formidable": "^1.2.1"
+    "uuid": "^3.3.3"
   }
 }
