--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 public/images/users/user-*
 public/images/categories/category-*
-public/images/products/product-*
+public/images/products/*.jpeg
 .env
 package-lock.json
