--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.2.0",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.10",
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
