--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
+    "paymaya-node-sdk": "^0.1.0",
     "uuid": "^3.3.3"
   }
 }
