--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ public/images/categories/category-*
 public/images/products/product-*
 public/images/bundles/bundle-*
 public/images/banners/banner-*
+public/images/sidebanners/sidebanner-*
 .env
 package-lock.json
