--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.7.10",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
     "paymaya-node-sdk": "^0.1.0",
